--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,80 +4,186 @@
 
 @layer base {
 	:root {
-		--color-primary: 28 51% 28%;
-		--color-primary-dark: 23 54% 22%;
-		--color-primary-light: 22 39% 39%;
-		--color-background: 40 55% 98%;
-		--color-text: 17 47% 12%;
-		--color-text-secondary: 23 14% 38%;
-
-		--color-border: 33 24% 88%;
-		--color-input-bg: 0 0% 100%;
-		--color-input-border: 30 18% 81%;
-		--color-success: 133 22% 34%;
-		--color-error: 4 41% 46%;
-
-		--color-gauge-secondary: 40 33% 94%;
-
-		--radius: 0.5rem;
-
-		--background: var(--color-background);
-		--foreground: var(--color-text);
-
-		--card: var(--color-background);
-		--card-foreground: var(--color-text);
-
-		--popover: var(--color-background);
-		--popover-foreground: var(--color-text);
-
-		--primary: var(--color-primary);
-		--primary-foreground: 0 0% 100%;
-
-		--secondary: var(--color-gauge-secondary);
-		--secondary-foreground: var(--color-text);
-
-		--muted: var(--color-input-bg);
-		--muted-foreground: var(--color-text-secondary);
-
-		--accent: var(--color-primary-light);
-		--accent-foreground: 0 0% 100%;
-
-		--destructive: var(--color-error);
-		--destructive-foreground: 0 0% 100%;
-
-		--border: var(--color-border);
-		--input: var(--color-input-border);
-		--ring: var(--color-primary);
+		--background: oklch(0.9582 0.0152 90.2357);
+		--foreground: oklch(0.376 0.0225 64.3434);
+		--card: oklch(0.9914 0.0098 87.4695);
+		--card-foreground: oklch(0.376 0.0225 64.3434);
+		--popover: oklch(0.9914 0.0098 87.4695);
+		--popover-foreground: oklch(0.376 0.0225 64.3434);
+		--primary: oklch(0.618 0.0778 65.5444);
+		--primary-foreground: oklch(1 0 0);
+		--secondary: oklch(0.8846 0.0302 85.5655);
+		--secondary-foreground: oklch(0.4313 0.03 64.9288);
+		--muted: oklch(0.9239 0.019 83.0636);
+		--muted-foreground: oklch(0.5391 0.0387 71.1655);
+		--accent: oklch(0.8348 0.0426 88.8064);
+		--accent-foreground: oklch(0.376 0.0225 64.3434);
+		--destructive: oklch(0.5471 0.1438 32.9149);
+		--destructive-foreground: oklch(1 0 0);
+		--success: oklch(0.4833 0.0647 150.07);
+		--border: oklch(0.8606 0.0321 84.5881);
+		--input: oklch(0.8606 0.0321 84.5881);
+		--ring: oklch(0.618 0.0778 65.5444);
+		--chart-1: oklch(0.618 0.0778 65.5444);
+		--chart-2: oklch(0.5604 0.0624 68.5805);
+		--chart-3: oklch(0.4851 0.057 72.6827);
+		--chart-4: oklch(0.6777 0.0624 64.7755);
+		--chart-5: oklch(0.7264 0.0581 66.6967);
+		--sidebar: oklch(0.9239 0.019 83.0636);
+		--sidebar-foreground: oklch(0.376 0.0225 64.3434);
+		--sidebar-primary: oklch(0.618 0.0778 65.5444);
+		--sidebar-primary-foreground: oklch(1 0 0);
+		--sidebar-accent: oklch(0.8348 0.0426 88.8064);
+		--sidebar-accent-foreground: oklch(0.376 0.0225 64.3434);
+		--sidebar-border: oklch(0.8606 0.0321 84.5881);
+		--sidebar-ring: oklch(0.618 0.0778 65.5444);
+		--font-sans: Libre Baskerville, serif;
+		--font-serif: Lora, serif;
+		--font-mono: IBM Plex Mono, monospace;
+		--radius: 0.25rem;
+		--shadow-x: 2px;
+		--shadow-y: 3px;
+		--shadow-blur: 5px;
+		--shadow-spread: 0px;
+		--shadow-opacity: 0.12;
+		--shadow-color: hsl(28 13% 20%);
+		--shadow-2xs: 2px 3px 5px 0px hsl(28 13% 20% / 0.06);
+		--shadow-xs: 2px 3px 5px 0px hsl(28 13% 20% / 0.06);
+		--shadow-sm:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 1px 2px -1px hsl(28 13% 20% / 0.12);
+		--shadow:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 1px 2px -1px hsl(28 13% 20% / 0.12);
+		--shadow-md:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 2px 4px -1px hsl(28 13% 20% / 0.12);
+		--shadow-lg:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 4px 6px -1px hsl(28 13% 20% / 0.12);
+		--shadow-xl:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 8px 10px -1px hsl(28 13% 20% / 0.12);
+		--shadow-2xl: 2px 3px 5px 0px hsl(28 13% 20% / 0.3);
+		--tracking-normal: 0em;
+		--spacing: 0.25rem;
 	}
 
 	.dark {
-		--color-background: 17 19% 10%;
-		--color-text: 33 24% 88%;
-		--color-text-secondary: 23 12% 59%;
-		--color-border: 23 19% 18%;
-		--color-input-bg: 23 21% 15%;
-		--color-input-border: 23 18% 23%;
-		--color-gauge-secondary: 23 21% 15%;
+		--background: oklch(0.2747 0.0139 57.6523);
+		--foreground: oklch(0.9239 0.019 83.0636);
+		--card: oklch(0.3237 0.0155 59.0603);
+		--card-foreground: oklch(0.9239 0.019 83.0636);
+		--popover: oklch(0.3237 0.0155 59.0603);
+		--popover-foreground: oklch(0.9239 0.019 83.0636);
+		--primary: oklch(0.7264 0.0581 66.6967);
+		--primary-foreground: oklch(0.2747 0.0139 57.6523);
+		--secondary: oklch(0.3795 0.0181 57.128);
+		--secondary-foreground: oklch(0.9239 0.019 83.0636);
+		--muted: oklch(0.2939 0.0125 62.1298);
+		--muted-foreground: oklch(0.7982 0.0243 82.1078);
+		--accent: oklch(0.4186 0.0281 56.3404);
+		--accent-foreground: oklch(0.9239 0.019 83.0636);
+		--destructive: oklch(0.5471 0.1438 32.9149);
+		--destructive-foreground: oklch(1 0 0);
+		--border: oklch(0.3795 0.0181 57.128);
+		--input: oklch(0.3795 0.0181 57.128);
+		--ring: oklch(0.7264 0.0581 66.6967);
+		--chart-1: oklch(0.7264 0.0581 66.6967);
+		--chart-2: oklch(0.6777 0.0624 64.7755);
+		--chart-3: oklch(0.618 0.0778 65.5444);
+		--chart-4: oklch(0.5604 0.0624 68.5805);
+		--chart-5: oklch(0.4851 0.057 72.6827);
+		--sidebar: oklch(0.2747 0.0139 57.6523);
+		--sidebar-foreground: oklch(0.9239 0.019 83.0636);
+		--sidebar-primary: oklch(0.7264 0.0581 66.6967);
+		--sidebar-primary-foreground: oklch(0.2747 0.0139 57.6523);
+		--sidebar-accent: oklch(0.4186 0.0281 56.3404);
+		--sidebar-accent-foreground: oklch(0.9239 0.019 83.0636);
+		--sidebar-border: oklch(0.3795 0.0181 57.128);
+		--sidebar-ring: oklch(0.7264 0.0581 66.6967);
+		--font-sans: Libre Baskerville, serif;
+		--font-serif: Lora, serif;
+		--font-mono: IBM Plex Mono, monospace;
+		--radius: 0.25rem;
+		--shadow-x: 2px;
+		--shadow-y: 3px;
+		--shadow-blur: 5px;
+		--shadow-spread: 0px;
+		--shadow-opacity: 0.12;
+		--shadow-color: hsl(28 13% 20%);
+		--shadow-2xs: 2px 3px 5px 0px hsl(28 13% 20% / 0.06);
+		--shadow-xs: 2px 3px 5px 0px hsl(28 13% 20% / 0.06);
+		--shadow-sm:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 1px 2px -1px hsl(28 13% 20% / 0.12);
+		--shadow:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 1px 2px -1px hsl(28 13% 20% / 0.12);
+		--shadow-md:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 2px 4px -1px hsl(28 13% 20% / 0.12);
+		--shadow-lg:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 4px 6px -1px hsl(28 13% 20% / 0.12);
+		--shadow-xl:
+			2px 3px 5px 0px hsl(28 13% 20% / 0.12),
+			2px 8px 10px -1px hsl(28 13% 20% / 0.12);
+		--shadow-2xl: 2px 3px 5px 0px hsl(28 13% 20% / 0.3);
+	}
 
-		--background: var(--color-background);
-		--foreground: var(--color-text);
-		--card: var(--color-background);
-		--card-foreground: var(--color-text);
-		--popover: var(--color-background);
-		--popover-foreground: var(--color-text);
-		--primary: var(--color-primary);
-		--primary-foreground: 0 0% 100%;
-		--secondary: var(--color-gauge-secondary);
-		--secondary-foreground: var(--color-text);
-		--muted: var(--color-input-bg);
-		--muted-foreground: var(--color-text-secondary);
-		--accent: var(--color-primary-dark);
-		--accent-foreground: 0 0% 100%;
-		--destructive: var(--color-error);
-		--destructive-foreground: 0 0% 100%;
-		--border: var(--color-border);
-		--input: var(--color-input-border);
-		--ring: var(--color-primary-light);
+	@theme inline {
+		--color-background: var(--background);
+		--color-foreground: var(--foreground);
+		--color-card: var(--card);
+		--color-card-foreground: var(--card-foreground);
+		--color-popover: var(--popover);
+		--color-popover-foreground: var(--popover-foreground);
+		--color-primary: var(--primary);
+		--color-primary-foreground: var(--primary-foreground);
+		--color-secondary: var(--secondary);
+		--color-secondary-foreground: var(--secondary-foreground);
+		--color-muted: var(--muted);
+		--color-muted-foreground: var(--muted-foreground);
+		--color-accent: var(--accent);
+		--color-accent-foreground: var(--accent-foreground);
+		--color-destructive: var(--destructive);
+		--color-destructive-foreground: var(--destructive-foreground);
+		--color-success: var(--success);
+		--color-border: var(--border);
+		--color-input: var(--input);
+		--color-ring: var(--ring);
+		--color-chart-1: var(--chart-1);
+		--color-chart-2: var(--chart-2);
+		--color-chart-3: var(--chart-3);
+		--color-chart-4: var(--chart-4);
+		--color-chart-5: var(--chart-5);
+		--color-sidebar: var(--sidebar);
+		--color-sidebar-foreground: var(--sidebar-foreground);
+		--color-sidebar-primary: var(--sidebar-primary);
+		--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+		--color-sidebar-accent: var(--sidebar-accent);
+		--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+		--color-sidebar-border: var(--sidebar-border);
+		--color-sidebar-ring: var(--sidebar-ring);
+
+		--font-sans: var(--font-sans);
+		--font-mono: var(--font-mono);
+		--font-serif: var(--font-serif);
+
+		--radius-sm: calc(var(--radius) - 4px);
+		--radius-md: calc(var(--radius) - 2px);
+		--radius-lg: var(--radius);
+		--radius-xl: calc(var(--radius) + 4px);
+
+		--shadow-2xs: var(--shadow-2xs);
+		--shadow-xs: var(--shadow-xs);
+		--shadow-sm: var(--shadow-sm);
+		--shadow: var(--shadow);
+		--shadow-md: var(--shadow-md);
+		--shadow-lg: var(--shadow-lg);
+		--shadow-xl: var(--shadow-xl);
+		--shadow-2xl: var(--shadow-2xl);
 	}
 }
 
