--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,76 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@plugin 'tailwindcss-animate';
+
+@custom-variant dark (&:is(.dark *));
+
+@theme {
+	--color-border: var(--border);
+	--color-input: var(--input);
+	--color-ring: var(--ring);
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+
+	--color-primary: var(--primary);
+	--color-primary-foreground: var(--primary-foreground);
+	--color-primary-light: var(--color-primary-light);
+	--color-primary-dark: var(--color-primary-dark);
+
+	--color-secondary: var(--secondary);
+	--color-secondary-foreground: var(--secondary-foreground);
+
+	--color-destructive: var(--destructive);
+	--color-destructive-foreground: var(--destructive-foreground);
+
+	--color-muted: var(--muted);
+	--color-muted-foreground: var(--muted-foreground);
+
+	--color-accent: var(--accent);
+	--color-accent-foreground: var(--accent-foreground);
+
+	--color-popover: var(--popover);
+	--color-popover-foreground: var(--popover-foreground);
+
+	--color-card: var(--card);
+	--color-card-foreground: var(--card-foreground);
+
+	--color-success: var(--color-success);
+	--color-error: var(--color-error);
+
+	--color-text: var(--color-text);
+	--color-text-secondary: var(--color-text-secondary);
+
+	--color-gauge-primary: var(--color-gauge-primary);
+	--color-gauge-secondary: var(--color-gauge-secondary);
+
+	--color-chart-1: var(--chart-1);
+	--color-chart-2: var(--chart-2);
+	--color-chart-3: var(--chart-3);
+	--color-chart-4: var(--chart-4);
+	--color-chart-5: var(--chart-5);
+
+	--radius-lg: var(--radius);
+	--radius-md: calc(var(--radius) - 2px);
+	--radius-sm: calc(var(--radius) - 4px);
+}
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+	*,
+	::after,
+	::before,
+	::backdrop,
+	::file-selector-button {
+		border-color: var(--color-gray-200, currentcolor);
+	}
+}
 
 @layer base {
 	:root {
@@ -37,9 +107,6 @@
 		--sidebar-accent-foreground: oklch(0.376 0.0225 64.3434);
 		--sidebar-border: oklch(0.8606 0.0321 84.5881);
 		--sidebar-ring: oklch(0.618 0.0778 65.5444);
-		--font-sans: Libre Baskerville, serif;
-		--font-serif: Lora, serif;
-		--font-mono: IBM Plex Mono, monospace;
 		--radius: 0.25rem;
 		--shadow-x: 2px;
 		--shadow-y: 3px;
